# weaver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: color.rs  components.rs  curl.rs  http.rs  main.rs  setting.rs  style.rs
src/components/: frame.rs  mod.rs
src/components/inline/: select.rs
src/request/: http.rs  mod.rs
src/style/: mod.rs
