[package]
name = "weaver"
version = "0.1.0"
edition = "2021"
authors = ["will <https://github.com/willser>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Epi and web+native backends
# The dir where store in `https://docs.rs/directories-next/2.0.0/directories_next/struct.ProjectDirs.html#method.data_dir`
# Tracing this issue to change dir: `https://github.com/emilk/egui/issues/914`
eframe = {version = "0.17.0" ,features=["default","persistence"]}
# Deserialize/Serialize
serde = { version = "1", features = ["derive"]}
# Create request id
rand = "0.8"
# Load font from system
font-loader = "0.11.0"
# TODO temp depend,mabye remove later
rust-fontconfig = {version = "0.1.5",features=["std"]}
# Create file dialog
# TODO Replace this with a egui window
rfd = "0.8"
# Sned http request
ureq = "2.0.0"
# Promise
poll-promise = "0.1.0"